Styling and Templaiting
Dense style

--- a/public/sass/nav.sass
+++ b/public/sass/nav.sass
@@ -3,6 +3,7 @@ $nav-height-buttons: 2em
 $default-text-size: 2em
 
 .nav-sensible
+  font-family: Bahnschrift, sans-serif
   display: flex
   justify-content: center
   margin-bottom: 1em
@@ -10,3 +11,11 @@ $default-text-size: 2em
     font-size: $default-text-size
     width: $nav-width-buttons
     height: $nav-height-buttons
+    background-color: #4CAF50
+    border: none
+    color: ghostwhite
+    text-align: center
+    text-decoration: none
+    overflow: hidden
+    cursor: pointer
+    margin: 0 .2em 0 .2em
