--- a/public/sass/reg-style.sass
+++ b/public/sass/reg-style.sass
@@ -4,7 +4,7 @@ $default-form-margin: .3em
 $default-button-text-size: .7em
 
 body
-  font-family: monospace
+  font-family: Bahnschrift, sans-serif
 .content
   display: flex
   justify-content: center
