--- a/public/sass/error.sass
+++ b/public/sass/error.sass
@@ -2,10 +2,10 @@
   display: flex
   align-self: center
   flex-direction: column
-  font-family: Bahnschrift
+  font-family: Bahnschrift, sans-serif
   max-width: 40em
   margin-top: 5em
   margin-left: 10em
-
+  color: slategrey
   hr
     border-right: 40em groove dimgrey
